# browser-control

./: .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
benches/: gather_scatter.rs  primitives.rs  workloads.rs
examples/: bit_tricks.rs  bloom_filter.rs  chess_knight_moves.rs  gray_code.rs  hamming.rs  ipv4_header.rs  morton_code.rs  morton_pdep.rs  permissions.rs  rgb_pack.rs  subset_dp.rs
scripts/: verify.sh
skills/domain-skills/aa/: checkout.md
skills/domain-skills/agentlist/: discovery.md
skills/domain-skills/allrecipes/: recipe-extraction.md
skills/domain-skills/amazon/: product-search.md  retail-workflows.md
skills/domain-skills/apple/: product-store-support.md  scraping.md
skills/domain-skills/arxiv/: paper-search.md
skills/domain-skills/atlas/: overview.md
skills/domain-skills/bbc-news/: news-audio.md
skills/domain-skills/booking-com/: hotel-booking.md  scraping.md
skills/domain-skills/browser-use-cloud/: cloud.md
skills/domain-skills/cambridge-dictionary/: dictionary-grammar.md
skills/domain-skills/claude-ai/: share-export.md
skills/domain-skills/coursera/: course-catalog.md
skills/domain-skills/ctrip/: hotels.md
skills/domain-skills/espn/: sports-research.md
skills/domain-skills/expedia/: automation.md
skills/domain-skills/facebook/: groups.md  pages.md
skills/domain-skills/flipkart/: shopping.md
skills/domain-skills/framer/: editor.md
skills/domain-skills/g2/: scraping.md
skills/domain-skills/github/: github-research.md  scraping.md
skills/domain-skills/glassdoor/: scraping.md
skills/domain-skills/gmail/: compose.md
skills/domain-skills/google-flights/: flight-search.md  scraping.md
skills/domain-skills/google-maps/: maps-reviews.md  scraping.md
skills/domain-skills/google-search/: scraping.md  source-verification.md
skills/domain-skills/huggingface/: model-hub.md
skills/domain-skills/loom/: folder-enumeration.md
skills/domain-skills/ly-com/: hotels.md
skills/domain-skills/manus/: tasks.md
skills/domain-skills/medium/: article-hydration.md
skills/domain-skills/musicbrainz/: scraping.md
skills/domain-skills/nasa/: scraping.md
skills/domain-skills/openstreetmap/: scraping.md
skills/domain-skills/perplexity/: computer.md
skills/domain-skills/polymarket/: scraping.md
skills/interaction-skills/: connection.md  evidence-page.md  final-answer.md  freshness.md  network-requests.md  profile-sync.md  scrolling.md  tabs.md
src/: accel.rs  actions.rs  align.rs  bits.rs  bytes.rs  cdp.rs  cloud.rs  daemon.rs  explain.rs  format.rs  js.rs  lib.rs  lifecycle.rs  main.rs  morton.rs  output.rs  workspace.rs
tests/: api.rs  properties.rs  run_claude_browser_control.py
(+11 files in other folders)
