[package]
name = "browser-control-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
description = "A tiny, fast Rust CLI that drives a real browser over the Chrome DevTools Protocol, for coding agents."
license = "MIT"
repository = "https://github.com/keon/browser-control"
homepage = "https://github.com/keon/browser-control"
readme = "README.md"
keywords = ["browser", "cdp", "automation", "cli", "agent"]
categories = ["command-line-utilities", "web-programming"]
exclude = ["assets/", "skills/", "tests/", "scripts/"]

[[bin]]
name = "browser-control"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.102"
base64 = "=0.22.1"
clap = { version = "=4.6.1", features = ["derive"] }
futures-util = "=0.3.32"
reqwest = { version = "=0.12.28", features = ["json"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "=0.26.2", features = ["native-tls"] }
